# e_waste_project

./: LICENSE  README.md  pyproject.toml
